--- a/cluster/pom.xml
+++ b/cluster/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>io.scalecube</groupId>
         <artifactId>scalecube-parent</artifactId>
-        <version>1.0.5-SNAPSHOT</version>
+        <version>1.0.5</version>
     </parent>
     <artifactId>scalecube-cluster</artifactId>
     <name>ScaleCube/Cluster</name>
