--- a/services/pom.xml
+++ b/services/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>io.scalecube</groupId>
 		<artifactId>scalecube-parent</artifactId>
-		<version>1.0.5-SNAPSHOT</version>
+		<version>1.0.5</version>
 	</parent>
 
 	<artifactId>scalecube-services</artifactId>
