--- a/pom.xml
+++ b/pom.xml
@@ -78,8 +78,8 @@
         <module>benchmark</module>
         <module>examples</module>
         <module>services</module>
-    	<module>Metrics</module>
-    	<module>Metrics-codahale</module>
+    	<module>metrics</module>
+    	<module>metrics-codahale</module>
     </modules>
 
     <dependencyManagement>
