--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -12,7 +12,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>scalecube-services</artifactId>
-      <version>${project.version}</version>
+      <version>2.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>io.scalecube</groupId>
