--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
 		<jackson.version>2.9.0</jackson.version>
 		<scalecube.version>1.0.9</scalecube.version>
 		<reactor.version>3.1.6.RELEASE</reactor.version>
+		<metrics.version>3.1.2</metrics.version>
 	</properties>
 
 	<modules>
