--- a/services/pom.xml
+++ b/services/pom.xml
@@ -25,13 +25,12 @@
 			<artifactId>scalecube-cluster</artifactId>
 			<version>${scalecube.version}</version>
 		</dependency>
-
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>scalecube-utils</artifactId>
-			<version>1.1.0-SNAPSHOT</version>
-		</dependency>
-
+ 		
+        <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-core</artifactId>
+            <version>${metrics.version}</version>
+        </dependency>
 		<!-- Jackson deps -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
