--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
 		<module>services-api</module>
 		<module>services</module>
 		<module>scalecube-services-network</module>
+		<module>scalecube-services-transport</module>
 	</modules>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/io.projectreactor/reactor-core -->
