--- a/rsocket-services-transport/pom.xml
+++ b/rsocket-services-transport/pom.xml
@@ -1,10 +1,39 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>io.scalecube</groupId>
-    <artifactId>scalecube-services-parent</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
-  </parent>
-  <artifactId>rsocket-services-transport</artifactId>
-  <name>Scalecube/RSocket-Transport</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>io.scalecube</groupId>
+		<artifactId>scalecube-services-parent</artifactId>
+		<version>2.0.0-SNAPSHOT</version>
+	</parent>
+	<artifactId>rsocket-services-transport</artifactId>
+	<name>Scalecube/RSocket-Transport</name>
+
+	<properties>
+		<rsocket.version>0.10.3</rsocket.version>
+	</properties>
+
+	<dependencies>
+		<dependency>
+			<groupId>io.scalecube</groupId>
+			<artifactId>scalecube-services-transport</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.rsocket</groupId>
+			<artifactId>rsocket-core</artifactId>
+			<version>${rsocket.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.rsocket</groupId>
+			<artifactId>rsocket-transport-local</artifactId>
+			<version>${rsocket.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.rsocket</groupId>
+			<artifactId>rsocket-transport-netty</artifactId>
+			<version>${rsocket.version}</version>
+		</dependency>
+	</dependencies>
 </project>
