--- a/pom.xml
+++ b/pom.xml
@@ -1,89 +1,144 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>io.scalecube</groupId>
-	<artifactId>scalecube-services-parent</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
-	<packaging>pom</packaging>
+    <groupId>io.scalecube</groupId>
+    <artifactId>scalecube-services-parent</artifactId>
+    <version>2.0.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-	<name>ScaleCube</name>
-	<description>
+    <name>ScaleCube</name>
+    <description>
         ScaleCube is a lightweight decentralized cluster membership, failure detection, messaging and
         gossip protocol library for the Java VM.
     </description>
-	<inceptionYear>2015</inceptionYear>
-	<url>http://scalecube.io</url>
+    <inceptionYear>2015</inceptionYear>
+    <url>http://scalecube.io</url>
 
-	<licenses>
-		<license>
-			<name>The Apache License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-		</license>
-	</licenses>
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
 
-	<prerequisites>
-		<maven>3.0.3</maven>
-	</prerequisites>
+    <prerequisites>
+        <maven>3.0.3</maven>
+    </prerequisites>
 
-	<scm>
-		<url>https://github.com/scalecube/scalecube</url>
-		<connection>scm:git:git@github.com:scalecube/scalecube.git</connection>
-		<developerConnection>scm:git:git@github.com:scalecube/scalecube.git
+    <scm>
+        <url>https://github.com/scalecube/scalecube</url>
+        <connection>scm:git:git@github.com:scalecube/scalecube.git</connection>
+        <developerConnection>scm:git:git@github.com:scalecube/scalecube.git
         </developerConnection>
-		<tag>HEAD</tag>
-	</scm>
+        <tag>HEAD</tag>
+    </scm>
 
-	<developers>
-		<developer>
-			<id>scalecube.io</id>
-			<name>The ScaleCube Project Contributors</name>
-			<email>info@scalecube.io</email>
-			<organization>The ScaleCube Project</organization>
-			<organizationUrl>http://scalecube.io/</organizationUrl>
-		</developer>
-	</developers>
+    <developers>
+        <developer>
+            <id>scalecube.io</id>
+            <name>The ScaleCube Project Contributors</name>
+            <email>info@scalecube.io</email>
+            <organization>The ScaleCube Project</organization>
+            <organizationUrl>http://scalecube.io/</organizationUrl>
+        </developer>
+    </developers>
 
-	<distributionManagement>
-		<snapshotRepository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
-		<repository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-		</repository>
-	</distributionManagement>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 
-	<properties>
-		<argLine>-Xms1024m -Xmx2048m</argLine>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<jackson.version>2.9.0</jackson.version>
-		<scalecube.version>1.0.9</scalecube.version>
-		<reactor.version>3.1.6.RELEASE</reactor.version>
-		<metrics.version>3.1.2</metrics.version>
-	</properties>
+    <properties>
+        <argLine>-Xms1024m -Xmx2048m</argLine>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <jackson.version>2.9.0</jackson.version>
+        <scalecube.version>1.0.9</scalecube.version>
+        <reactor.version>3.1.6.RELEASE</reactor.version>
+        <metrics.version>3.1.2</metrics.version>
+        <rsocket.version>0.10.3</rsocket.version>
+        <slf4j.version>1.7.7</slf4j.version>
+        <log4j.version>2.6.2</log4j.version>
+    </properties>
 
-	<modules>
-		<module>services-api</module>
-		<module>services</module>
-		<module>services-transport</module>
-		<module>rsocket-transport</module>
-	</modules>
-	<dependencies>
-		<!-- https://mvnrepository.com/artifact/io.projectreactor/reactor-core -->
-		<dependency>
-			<groupId>io.projectreactor</groupId>
-			<artifactId>reactor-core</artifactId>
-			<version>${reactor.version}</version>
-		</dependency>
-	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
+    <modules>
+        <module>services-api</module>
+        <module>services</module>
+        <module>services-transport</module>
+        <module>rsocket-transport</module>
+    </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.projectreactor</groupId>
+                <artifactId>reactor-core</artifactId>
+                <version>${reactor.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.rsocket</groupId>
+                <artifactId>rsocket-core</artifactId>
+                <version>${rsocket.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.rsocket</groupId>
+                <artifactId>rsocket-transport-local</artifactId>
+                <version>${rsocket.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.rsocket</groupId>
+                <artifactId>rsocket-transport-netty</artifactId>
+                <version>${rsocket.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-slf4j-impl</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/io.projectreactor/reactor-core -->
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.3</version>
@@ -96,6 +151,6 @@
                     </compilerArgs>
                 </configuration>
             </plugin>
-		</plugins>
-	</build>
+        </plugins>
+    </build>
 </project>
