--- a/rsocket-transport/pom.xml
+++ b/rsocket-transport/pom.xml
@@ -35,6 +35,22 @@
 			<artifactId>rsocket-transport-netty</artifactId>
 			<version>${rsocket.version}</version>
 		</dependency>
+		<!-- Jackson deps -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
 	</dependencies>
 	
 	<repositories>
