--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
     <jsr305.version>3.0.2</jsr305.version>
     <jctools.version>2.1.2</jctools.version>
     <hamcrest-all.version>1.3</hamcrest-all.version>
+
+    <dockerfile.maven.extension.version>1.3.7</dockerfile.maven.extension.version>
+    <dockerfile.maven.version>1.3.7</dockerfile.maven.version>
+    <dockerfile.repository>scalecube/${project.artifactId}</dockerfile.repository>
+    <dockerfile.useMavenSettingsForAuth>true</dockerfile.useMavenSettingsForAuth>
   </properties>
 
   <modules>
@@ -266,5 +271,200 @@
       <url>http://jcenter.bintray.com</url>
     </pluginRepository>
   </pluginRepositories>
+
+  <build>
+    <extensions>
+      <extension>
+        <groupId>com.spotify</groupId>
+        <artifactId>dockerfile-maven-extension</artifactId>
+        <version>${dockerfile.maven.extension.version}</version>
+      </extension>
+    </extensions>
+
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-shade-plugin</artifactId>
+          <version>${maven-shade-plugin.version}</version>
+          <executions>
+            <execution>
+              <id>default</id>
+              <phase>package</phase>
+              <goals>
+                <goal>shade</goal>
+              </goals>
+              <configuration>
+                <transformers>
+                  <transformer
+                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                    <mainClass>${mainClass}</mainClass>
+                  </transformer>
+                  <transformer
+                    implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                </transformers>
+                <outputDirectory>${project.build.directory}</outputDirectory>
+                <createDependencyReducedPom>false</createDependencyReducedPom>
+                <shadedArtifactAttached>true</shadedArtifactAttached>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+
+        <plugin>
+          <artifactId>maven-jar-plugin</artifactId>
+          <configuration>
+            <archive>
+              <manifest>
+                <addClasspath>true</addClasspath>
+                <classpathPrefix>lib/</classpathPrefix>
+                <mainClass>${mainClass}</mainClass>
+              </manifest>
+            </archive>
+            <excludes>
+              <exclude>META-INF/*.SF</exclude>
+            </excludes>
+          </configuration>
+        </plugin>
+        <plugin>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <executions>
+            <execution>
+              <phase>package</phase>
+              <goals>
+                <goal>copy-dependencies</goal>
+              </goals>
+              <configuration>
+                <overWriteReleases>false</overWriteReleases>
+                <outputDirectory>${project.build.directory}/lib</outputDirectory>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+
+        <plugin>
+          <groupId>com.spotify</groupId>
+          <artifactId>dockerfile-maven-plugin</artifactId>
+          <version>${dockerfile.maven.version}</version>
+          <executions>
+            <execution>
+              <id>default</id>
+              <goals>
+                <goal>build</goal>
+              </goals>
+              <phase>install</phase>
+              <configuration>
+                <buildArgs>
+                  <EXECUTABLE_JAR>${project.build.finalName}</EXECUTABLE_JAR>
+                </buildArgs>
+                <tag>latest</tag>
+              </configuration>
+            </execution>
+            <execution>
+              <id>tag-version</id>
+              <goals>
+                <goal>tag</goal>
+              </goals>
+              <phase>install</phase>
+              <configuration>
+                <tag>${project.version}</tag>
+              </configuration>
+            </execution>
+            <execution>
+              <id>deployment</id>
+              <goals>
+                <goal>push</goal>
+              </goals>
+              <phase>deploy</phase>
+              <configuration>
+                <tag>latest</tag>
+              </configuration>
+            </execution>
+            <execution>
+              <id>tag-deployment</id>
+              <goals>
+                <goal>push</goal>
+              </goals>
+              <phase>deploy</phase>
+              <configuration>
+                <tag>${project.version}</tag>
+              </configuration>
+            </execution>
+            <execution>
+              <id>create-extra-tags</id>
+              <goals>
+                <goal>tag</goal>
+              </goals>
+              <phase>install</phase>
+              <configuration>
+                <tag>${extratags}</tag>
+                <skipTag>${noextratags}</skipTag>
+              </configuration>
+            </execution>
+            <execution>
+              <id>push-extra-tags</id>
+              <goals>
+                <goal>push</goal>
+              </goals>
+              <phase>deploy</phase>
+              <configuration>
+                <tag>${extratags}</tag>
+                <skip>${noextratags}</skip>
+              </configuration>
+            </execution>
+          </executions>
+          <configuration>
+            <useMavenSettingsForAuth>true</useMavenSettingsForAuth>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+
+  <profiles>
+    <profile>
+      <id>no-extra-tags</id>
+      <properties>
+        <noextratags>true</noextratags>
+      </properties>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+    </profile>
+    <profile>
+      <id>extra-tags</id>
+      <properties>
+        <noextratags>false</noextratags>
+      </properties>
+      <activation>
+        <property>
+          <name>extratags</name>
+        </property>
+      </activation>
+    </profile>
+    <profile>
+      <id>SkipDockerGoals</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <dockerfile.skip>true</dockerfile.skip>
+      </properties>
+    </profile>
+    <profile>
+      <id>RunDockerGoals</id>
+      <activation>
+        <os>
+          <family>unix</family>
+        </os>
+        <file>
+          <exists>/usr/bin/docker</exists>
+        </file>
+      </activation>
+      <properties>
+        <dockerfile.skip>false</dockerfile.skip>
+      </properties>
+    </profile>
+  </profiles>
 
 </project>
