--- a/benchmarks/pom.xml
+++ b/benchmarks/pom.xml
@@ -15,6 +15,7 @@
   <packaging>jar</packaging>
 
   <properties>
+    <dockerfile.skip>false</dockerfile.skip>
     <uberjar.name>scalecube-services-benchmarks</uberjar.name>
   </properties>
 
@@ -93,49 +94,5 @@
       </plugin>
     </plugins>
   </build>
-
-  <profiles>
-    <profile>
-      <id>release</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.sonatype.plugins</groupId>
-            <artifactId>nexus-staging-maven-plugin</artifactId>
-          </plugin>
-          <plugin>
-            <artifactId>maven-source-plugin</artifactId>
-          </plugin>
-          <plugin>
-            <artifactId>maven-javadoc-plugin</artifactId>
-          </plugin>
-          <plugin>
-            <artifactId>maven-gpg-plugin</artifactId>
-          </plugin>
-          <plugin>
-            <groupId>com.spotify</groupId>
-            <artifactId>dockerfile-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>push-image</id>
-                <phase>deploy</phase>
-                <goals>
-                  <goal>tag</goal>
-                  <goal>push</goal>
-                </goals>
-              </execution>
-            </executions>
-            <configuration>
-              <skipPush>false</skipPush>
-              <tag>latest</tag>
-              <buildArgs>
-                <EXECUTABLE_JAR>${project.build.finalName}</EXECUTABLE_JAR>
-              </buildArgs>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 
 </project>
