--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>io.scalecube</groupId>
     <artifactId>scalecube-parent-pom</artifactId>
-    <version>0.0.12</version>
+    <version>0.0.11</version>
   </parent>
   <packaging>pom</packaging>
 
@@ -37,6 +37,7 @@
     <jctools.version>2.1.2</jctools.version>
     <hamcrest-all.version>1.3</hamcrest-all.version>
 
+    <dockerfile.skip>true</dockerfile.skip>
     <dockerfile.maven.extension.version>1.4.4</dockerfile.maven.extension.version>
     <dockerfile.maven.version>1.4.4</dockerfile.maven.version>
     <dockerfile.repository>scalecube/${project.artifactId}</dockerfile.repository>
@@ -365,6 +366,48 @@
       <properties>
         <dockerfile.skip>false</dockerfile.skip>
       </properties>
+    </profile>
+    <profile>
+      <id>release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.sonatype.plugins</groupId>
+            <artifactId>nexus-staging-maven-plugin</artifactId>
+          </plugin>
+          <plugin>
+            <artifactId>maven-source-plugin</artifactId>
+          </plugin>
+          <plugin>
+            <artifactId>maven-javadoc-plugin</artifactId>
+          </plugin>
+          <plugin>
+            <artifactId>maven-gpg-plugin</artifactId>
+          </plugin>
+          <plugin>
+            <groupId>com.spotify</groupId>
+            <artifactId>dockerfile-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>push-image</id>
+                <phase>deploy</phase>
+                <goals>
+                  <goal>tag</goal>
+                  <goal>push</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <skip>${dockerfile.skip}</skip>
+              <skipPush>false</skipPush>
+              <tag>latest</tag>
+              <buildArgs>
+                <EXECUTABLE_JAR>${project.build.finalName}</EXECUTABLE_JAR>
+              </buildArgs>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
 
